# tophat

./: .build.yml  .clang-format  .editorconfig  .game.um.swp  .gitattributes  .gitignore  .gitmodules  ;  BUGS  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makeumka  README.md  box.json  build.bat  build.um  build_android.bat  collisionidea.txt  compile_flags.txt  emscripten_build.sh  game.um  gmon.out  main.um  main.um~HEAD  makefile  msbuild.bat  package.sh  pak.json  playground.html  prof.json  rewrite.md  shader.glsl  shell.html  todo.md  todo.txt  tophat  tophat.1  tophat.tar.xz  (+4 more)
.github/workflows/: package.yml
android/: CMakeLists.txt  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/assets/tophat/: main.um
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
cmd/: Makeumka  buildallt.sh  buildhelper.um  checkall.sh  compile_shader.sh  embedder.um  emscripten_build.sh  init.bat  install.bat  package.bat  th_emscripten_link  th_emscripten_link_playground  tophat  tophat-cli  tophat-gui.go  tophat.bat  tophat.batsh  win-buildmodules.bat
cmd/embedder/: go.mod  main.go  text.go
cmd/tophat-gui/: tophat-gui.go
demos/extensions/: main.c
demos/flappy/: main.um
demos/hello-world/: main.um
demos/platformer/: global.um  main.um  strings.um
demos/platformer/game/: bees.um  env.um  player.um
demos/pomodoro/: main.um
demos/space-shooter/: bullet.um  effects.um  enemy.um  hud.um  main.um  menu.um
demos/tetris/: Changelog  background.um  falling_piece.um  field.um  fx.um  gameplay.um  global.um  latch.um  main.um  presets.um
doc/: animation.um.md  audio.um.md  csv.um.md  entity.um.md  getting-started.md  image.um.md  input.um.md  misc.um.md  particles.um.md  polygon.um.md  rawdraw.um.md  raycast.um.md  rectangle.um.md  tilemap.um.md  tophat.um.md  tween.um.md  ui.um.md  vec.um.md
etc/: button.ff  icon.ff  playground.html  shader.glsl  shell.html  test.ff  tilemap-test.csv  win-readme
etc/logo/: .gitignore  Makefile  logo.xcf
etc/umbox_init/: README.md  box.json  init.tar  main.um
example/: preset.um
example/snake/: game.um
examples/: README.md  preset.um
examples/conway/: main.um
examples/dijkstra/: Makefile  findpath.um  main.c  main.um  main.umi
examples/extensions/: global.um  main.c  main.um  main.umi
examples/flappy/: main.um
examples/hello-world/: global.um  main.um
examples/item-list/: itemlist.um  main.um
examples/level-editor/: editor.um  global.um  main.um
examples/night-game/: game.um  global.um  main.um  mazegen.um  player.um
examples/platformer/: global.um  main.um  scene.um  strings.um  tilemap.txt
examples/platformer/game/: bees.um  env.um  game.um  player.um
examples/platformer/shaders/: lava.frag  lava.vert
examples/pomodoro/: d_font.um  main.um  what.txt
examples/preset/: game.um  global.um  main.um
examples/snake/: README.md  game.um  main.um
examples/snake/tophat/: input.um  misc.um  rawdraw.um  rectangle.um  tophat.um
examples/space-shooter/: README.md  bullet.um  deathscn.um  effects.um  enemy.um  game.um  gamescn.um  global.um  gmon.out  hud.um  main.um  menu.um  player.um  run.bat  settings.um  sound.um  sounds.um  star.um
examples/sprite-stacking/: gmon.out  main.um
examples/structured-project/: README.md  game.um  global.um  gmon.out  main.um  scene1.um  scene2.um  scene3.um
examples/structured-project/tophat/: polygon.um
examples/structured-project/tophat/std/: std.um
examples/tetris/: Changelog  background.um  bag.um  crazytext.um  falling_piece.um  fx.um  gameplay.um  global.um  latch.um  main.um  piece.um  presets.um
gradle/app/: build.gradle.kts
gradle/app/src/main/: AndroidManifest.xml
gradle/app/src/main/res/values/: strings.xml  themes.xml
gradle/app/src/main/res/values-night/: themes.xml
lib/: .gitmodules  chew.c
lib/chew/: chew.h
lib/glad/: glad.c  glad.h
lib/stb/: stb_image.h
samples/atlas/: main.um
samples/canvas/: main.um
samples/color/: main.um
samples/cursor/: main.um
samples/dpi/: main.um
samples/font/combined/: main.um
samples/font/ttf/: main.um
samples/fullscreen/: main.um
samples/input/gamepad/: main.um
samples/input/keyboard/: main.um
samples/rect/: main.um
samples/rt/: main.um
samples/tilemap/: main.um
samples/ui/scroll/: main.um
samples/window/: main.um
src/: .bindings.c.swp  .bindings.h.swp  .collisions.c.swp  .debug.c.swp  .debug.h.swp  .entity.c.swp  .entity.h.swp  .main.c.swp  .misc.c.swp  .misc.h.swp  .rect.c.swp  .rect.h.swp  .run.c.swp  Makefile  api.h  atlas.c  audio.c  audio.c.notc  audio.h  bindings.c  bindings.h  canvas.c  collisions.c  collisions.h  color.c  csv.c  csv.h  debug.c  debug.h  entity.c  entity.h  font.c  font.h  gl.c  image.c  image.h  input.c  input.h  light.c  light.h  (+44 more)
src/ext/: thext.h  thextdata.h
src/img/: .bmp.c.swp  bmp.c  bmp.h
tests/: allt.um  argst.um  atlast.um  audiot.um  canvast.um  colort.um  csvt.um  cursort.um  dpit.um  fontt.um  fullscreent.um  gamepadt.um  getimagedatat.um  imaget.um  inputt.um  lightt.um  navt.um  packt.um  pointToLinet.um  rayt.um  scissorst.um  shadert.um  signalt.um  sound.um  stresst.um  tilemapt.um  uit.um  windowt.um
umka/: .tophat.um.swp  Makefile  anim.um  animation.um  atlas.um  audio.um  canvas.um  coll.um  color.um  csv.um  effects.um  ent.um  entity.um  font.um  game.um  image.um  images.um  input.um  lerp.um  light.um  map.um  misc.um  nav.um  particles.um  placeholders.um  poly.um  polygon.um  rawdraw.um  ray.um  raycast.um  rect.um  rectangle.um  rt.um  scene.um  shader.um  signal.um  th.um  tilemap.um  tophat.um  tween.um  (+5 more)
umka/std/: map.um  mat.um  std.um  utf8.um
umka/ui/: grid.um  imagebox.um  label.um
wasm/: index.html
wren/: tophat.wren  wrenbind.c  wrenrun.c
